--- a/localRepo/index.html
+++ b/localRepo/index.html
@@ -1,5 +1,3 @@
 <p>this is a new repo </p>
-<<<<<<< HEAD
-=======
-<p> this is a new featured</p>
->>>>>>> 3bece396af06a3f169b66437f4823abaffdf4512
+
+<p> this is a new featured (button)</p>
